--- a/style.css
+++ b/style.css
@@ -15,4 +15,24 @@
 .container{
     grid-template-columns: repeat(1,1fr);
 }
+.food{
+    margin: 30px;
+}
+}
+
+@media screen and (min-width:577px)and (max-width:926px) {
+    .container{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .food{
+    margin: 30px;
+}
+}
+@media screen and (min-width:927px) and (max-width:1380px) {
+    .container{
+        grid-template-columns: repeat(3,1fr);
+    }
+    .food{
+        margin: 20px;
+    }
 }
